<?xml version="1.0"?>
<package format="3">
  <name>radial_menu_model</name>
  <version>0.4.1</version>
  <description>The radial_menu_model package</description>

  <maintainer email="okada@rm.is.tohoku.ac.jp">Yoshito Okada</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>radial_menu_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>radial_menu_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>radial_menu_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
